--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,54 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="Welcome" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_marginTop="43dp"
+        android:id="@+id/textViewHead"
+        android:layout_marginTop="28dp"
+        android:textSize="22dp"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/button_section2"
-        android:layout_toStartOf="@+id/button_section2"
-        android:textSize="22dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/goToSection2"
-        android:id="@+id/button_section2"
-        android:singleLine="false"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="onButtonLoginClick"/>
-
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/uName"
-        android:layout_marginTop="40dp"
-        android:hint="Username"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:text="@string/uname_variable" />
-
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_below="@+id/button_section2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="76dp"
-        android:hint="testPassword" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/testButton2Blacky"
-        android:id="@+id/testButtonBlacky"
-        android:layout_below="@+id/button_section2"
-        android:layout_alignLeft="@+id/button_section2"
-        android:layout_alignStart="@+id/button_section2"
-        android:layout_marginTop="15dp" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
