--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,22 +4,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="example.testapp.LoginActivity">
+    tools:context="example.testapp.LoginActivity"
+    android:background="@mipmap/logo_v3">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="12dp" />
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTextUsername"
-        android:layout_below="@+id/textView2"
+        android:text="@string/editTextUsernameString"
+        android:hint="Username"
+        android:layout_above="@+id/buttonLogin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="43dp"
-        android:text="@string/editTextUsernameString"
-        android:hint="Username" />
+        android:layout_marginBottom="5dp" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -27,27 +30,52 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editTextPassword"
-        android:layout_below="@+id/editTextUsername"
+        android:hint="Password"
+        android:layout_above="@+id/editTextUsername"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Password" />
+        android:layout_marginBottom="5dp" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/buttonLogin"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/textViewRegister"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Not registered now ?"
         android:id="@+id/textViewRegister"
-        android:layout_below="@+id/buttonLogin"
+        android:layout_marginBottom="19dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="75dp" />
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@mipmap/anonymous_clock"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:minHeight="35dp"
+        android:minWidth="35dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_below="@+id/buttonLogin"
+        android:src="@mipmap/anonymous_add"
+        android:minHeight="35dp"
+        android:minWidth="35dp" />
 
 </RelativeLayout>
