--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="example.testapp.LoginActivity"
-    android:background="@mipmap/logo_v3">
+    android:background="@mipmap/logo_v4">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="12dp" />
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/editTextPassword"
+        android:layout_alignLeft="@+id/textViewRegister"
+        android:layout_alignStart="@+id/textViewRegister" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -42,9 +44,8 @@
         android:text="Login"
         android:id="@+id/buttonLogin"
         android:layout_above="@+id/textViewRegister"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="5dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,18 +62,19 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewLogin"
         android:src="@mipmap/anonymous_clock"
-        android:layout_alignParentTop="true"
+        android:minHeight="35dp"
+        android:minWidth="35dp"
+        android:layout_alignBottom="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:minHeight="35dp"
-        android:minWidth="35dp" />
+        android:layout_marginBottom="-10dp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewRegister"
         android:layout_below="@+id/buttonLogin"
         android:src="@mipmap/anonymous_add"
         android:minHeight="35dp"
