--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,144 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@mipmap/logo_v5">
 
-    <TextView android:text="Welcome" android:layout_width="wrap_content"
+    <TextView android:text="Welcome to AppRilia" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewHead"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="46dp"
         android:textSize="22dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/imageButtonProfil"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/motorcycle"
+        android:id="@+id/motorcycle"
+        android:layout_below="@+id/textViewHead"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/kmUpdate"
+        android:hint="please update KM&apos;s"
+        android:layout_below="@+id/motorcycle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="22dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dateOfRegistration"
+        android:id="@+id/textView"
+        android:layout_below="@+id/kmUpdate"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="22dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/upcomingEvents"
+        android:id="@+id/textView3"
+        android:password="false"
+        android:layout_marginTop="38dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:phoneNumber="false" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox2"
+        android:layout_below="@+id/checkBox"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox3"
+        android:layout_below="@+id/checkBox2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButtonProfil"
+        android:background="@mipmap/salesman"
+        android:minHeight="60dp"
+        android:minWidth="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButtonToDo"
+        android:background="@mipmap/white_list"
+        android:minWidth="60dp"
+        android:minHeight="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButtonProfil"
+        android:layout_toEndOf="@+id/imageButtonProfil"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButtonVA"
+        android:background="@mipmap/network_monitor"
+        android:minHeight="60dp"
+        android:minWidth="60dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageButtonToDo"
+        android:layout_toEndOf="@+id/imageButtonToDo" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButtonHistory"
+        android:background="@mipmap/white_list_folder"
+        android:minWidth="60dp"
+        android:minHeight="60dp"
+        android:layout_marginRight="17dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/motorcycle"
+        android:layout_alignEnd="@+id/motorcycle"
+        android:layout_marginEnd="17dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Profil"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/imageButtonProfil"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="21dp"
+        android:textSize="15dp" />
 
 </RelativeLayout>
